--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@types/express": "^4.17.17",
         "@types/node": "^20.4.5",
+        "axios": "^1.4.0",
         "ejs": "^3.1.9",
         "express": "^4.18.2"
     },
